test/expected/explain_fo_less_eq_greater_2rck_i++default.out
struct S; explain friend int operator<=>(const S&, const S&) = default
         ^
10: error: operator <=> must return one of auto, std::partial_ordering, std::strong_ordering, or std::weak_ordering
